--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.3.3 <4.0.0'
 
 dependencies:
+  connectivity_plus: "^2.0.2"
+  http: ^0.13.3
   flutter:
     sdk: flutter
   sqflite: ^2.0.0+4
